netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: volume-cleaner-allow-egress
  namespace: das
spec:
  podSelector:
    matchLabels:
      app: volume-cleaner
  egress:
    - {}
  policyTypes:
    - Egress
